fixes misaligned text on mobile

--- a/src/styles/Admin/index.css
+++ b/src/styles/Admin/index.css
@@ -25,7 +25,7 @@ label {
     line-height: 50px;
     text-align: center;
     font-weight: bold;
-    font-size: 150%;
+    font-size: auto;
 }
 
 .form {
